--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.7.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
