--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.23.0",
+    "intl": "^1.2.5",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-intl": "^6.4.4",
     "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.0",
